adust list font color

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ ul {
 }
 
 li {
-    color: #bacdd8;
+    color: #e2e5e7;
     font-size: small;
     padding-top: 5px;
 }
@@ -106,7 +106,7 @@ p {
  }
 
  .duration {
-    color: #bacdd8; 
+    color: #e2e5e7; 
     font-size: small;
  }
 button {
