--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ body {
     padding: 10px 20px 20px 20px;
 }
 
+h2, h3 {
+    margin-bottom: 2px;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -75,16 +79,12 @@ ul {
 li {
     color: #e2e5e7;
     font-size: small;
-    padding-top: 5px;
+    padding-top: 7px;
 }
 
 h2 {
     color: hsl(179, 62%, 43%);
     
-}
-
-h2, h3 {
-    margin-bottom: 2px;
 }
 
 #promo {
@@ -95,20 +95,22 @@ p {
     font-size: small;
 }
 
-.bottom>p {
+.col-1>.bottom>p {
+    font-size: 0.9rem;
     font-weight: 700;
     color: #868c8f;
 }
  .price {
-     font-size: 1.6rem;
+     font-size: 1.8rem;
      font-weight: 700;
      margin-right: 10px;
  }
 
  .duration {
     color: #e2e5e7; 
-    font-size: small;
+    font-size: 1rem;
  }
+
 button {
     background-color: hsl(71, 73%, 54%); /* Green */
     display: block;
@@ -123,7 +125,7 @@ button {
     text-decoration: none;
     font-weight: 600;
     border-radius: 5px;
-    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 5px 5px 0 rgba(0,0,0,0.2);
   }
   .full-access {
       font-size: 0.9rem;
@@ -143,7 +145,8 @@ button {
     }
 
     .right {
-        padding: 20px;
+        padding-left: 40px;
+        padding-top: 20px;
         width: 100%;
         border-radius: 0 0 7px 0;
     }
@@ -158,17 +161,7 @@ button {
 
     button {
         width: 90%;
+        height: 75%;
     }
    
 }
-
-/*Desktop responsive code
-@media screen and (min-width: 375px) and (max-width: 1440px) {
-   
-
-    .box-2 {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-}*/
