--- a/style.css
+++ b/style.css
@@ -115,9 +115,8 @@ button {
     background-color: hsl(71, 73%, 54%); /* Green */
     display: block;
     margin: 5px 0;
-    padding: 10px;
+    padding: 10px 30px;
     cursor: pointer;
-    height: 60%;
     width: 100%;
     border: none;
     color: white;
@@ -127,6 +126,19 @@ button {
     border-radius: 5px;
     box-shadow: 0 5px 5px 0 rgba(0,0,0,0.2);
   }
+
+ /**
+ * Remove the inner border and padding in Firefox.
+ */
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
   .full-access {
       font-size: 0.9rem;
   }
@@ -160,8 +172,8 @@ button {
     }
 
     button {
-        width: 90%;
-        height: 75%;
+        width: 95%;
+        padding: 15px 30px;
     }
    
 }
